@@ -15,8 +15,13 @@ IN DEVELOPMENT
 
   BUG FIXES:
 
+    * Branching from a shared repository on a smart server into a new
+      repository now preserves the repository format.
+      (Andrew Bennetts, #269214)
+
     * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
       (Andrew Bennetts)
+
 
   DOCUMENTATION:
 
